#2925 - StepIndicator style fix on mobile

--- a/src/main/webapp/resources/css_dir/stepIndicator.css
+++ b/src/main/webapp/resources/css_dir/stepIndicator.css
@@ -2,7 +2,7 @@
 *
 * FWD revamp v0.1.3 [ updated to 21/05/2016 (DD/MM/YYYY) ]
 * for branch#1.15.000 (ROPHI_fwdhk)
-* Last CSS Compiled on: 2016-05-23 11:23:38 +0800
+* Last CSS Compiled on: 2016-06-17 16:26:39 +0800
 *
 **/
 /* line 2, ../sass/common_screen/_stepIndicator.scss */
@@ -142,40 +142,43 @@
 
   /* line 8, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator--mobile .stepIndicator__container {
+    width: 100%;
+    display: table;
     color: white;
     background-color: #061d29;
   }
 
-  /* line 14, ../sass/mobile/_stepIndicator.scss */
+  /* line 18, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator.sticky-bar {
     position: fixed;
     margin: 0;
   }
 
-  /* line 19, ../sass/mobile/_stepIndicator.scss */
+  /* line 23, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator__arrow {
     display: table-cell;
     vertical-align: middle;
+    width: 10%;
     padding: 5px 0 0 20px;
     font-size: 18px;
   }
-  /* line 28, ../sass/mobile/_stepIndicator.scss */
+  /* line 33, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator__arrow a {
     color: #ffffff;
   }
 
-  /* line 33, ../sass/mobile/_stepIndicator.scss */
+  /* line 38, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator__content {
     display: table-cell;
+    width: 70%;
     padding: 14px 20px;
     font-size: 18px;
   }
 
-  /* line 41, ../sass/mobile/_stepIndicator.scss */
+  /* line 48, ../sass/mobile/_stepIndicator.scss */
   .stepIndicator__stepof {
-    position: absolute;
-    top: 16px;
-    right: 30px;
+    width: 20%;
+    display: table-cell;
     color: #9ba5a7;
     font-size: 14px;
   }
